## configuration file

AC_INIT([VQMC], 0.1)

## set build directory
BUILD_DIR=`pwd`
AC_SUBST([BUILD_DIR], [$BUILD_DIR])
## Source files
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([Makefile.common])
AC_CONFIG_FILES([src/Configurations/Makefile])
AC_CONFIG_FILES([src/Configurations/VQMCconfig.cpp])
AC_CONFIG_FILES([src/Configurations/VQMCconfig.h])
AC_CONFIG_FILES([src/Configurations/JastrowConfig.cpp])
AC_CONFIG_FILES([src/Configurations/JastrowConfig.h])
AC_CONFIG_FILES([src/Energy_Terms/Makefile])
AC_CONFIG_FILES([src/Energy_Terms/localE.h])
AC_CONFIG_FILES([src/Energy_Terms/localESqd.h])
AC_CONFIG_FILES([src/Energy_Terms/SymHoLocalE.cpp])
AC_CONFIG_FILES([src/Energy_Terms/SymHoLocalE.h])
AC_CONFIG_FILES([src/Energy_Terms/SymHoLocalESqd.cpp])
AC_CONFIG_FILES([src/Energy_Terms/SymHoLocalESqd.h])
AC_CONFIG_FILES([src/Utilities/Makefile])
AC_CONFIG_FILES([src/Utilities/rand.cpp])
AC_CONFIG_FILES([src/Utilities/rand.h])
AC_CONFIG_FILES([src/Utilities/VMCPoint.h])
AC_CONFIG_FILES([src/Metropolis_Walker/Makefile])
AC_CONFIG_FILES([src/Metropolis_Walker/VQMCMetropolisWalker.cpp])
AC_CONFIG_FILES([src/Metropolis_Walker/VQMCMetropolisWalker.h])
AC_CONFIG_FILES([src/Wavefunctions/Makefile])
AC_CONFIG_FILES([src/Wavefunctions/EffectiveRangeF.cpp])
AC_CONFIG_FILES([src/Wavefunctions/EffectiveRangeF.h])
AC_CONFIG_FILES([src/Wavefunctions/InteractionF.h])
AC_CONFIG_FILES([src/Wavefunctions/Phi.h])
AC_CONFIG_FILES([src/Wavefunctions/SymHoPhi.cpp])
AC_CONFIG_FILES([src/Wavefunctions/SymHoPhi.h])
AC_CONFIG_FILES([system/main.cpp])


AC_OUTPUT
